Friends Page Styling Fix: Button Shifting Fixed

--- a/frontend/src/components/AddFriend/AddFriend.css
+++ b/frontend/src/components/AddFriend/AddFriend.css
@@ -146,3 +146,20 @@
     margin-bottom: 10px;
   }
 }
+
+.user-message-container{
+  min-height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.action-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 4.5rem; 
+  gap: 0.4rem;
+}
+
